--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,11 @@
 *= require_tree .
  *= require_self
  */
+
+.card {
+  border: 1px solid black;
+  margin-bottom: .5em;
+  p, .button {
+    margin: .25em .5em;
+  }
+}
