Added the ability to create a new link. The new link is appennded to the end of the container of links

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
 .card {
   border: 1px solid black;
   margin-bottom: .5em;
-  p, .button {
+  p, .button, label, input {
     margin: .25em .5em;
   }
 }
