Displaying comments with links, if a link box is clicked on. Changing the delete buttons to be red

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,3 +32,17 @@
     cursor: pointer;
   }
 }
+
+.small-top-margin {
+  margin-top: 1em;
+}
+
+.card.inLinks {
+  width: 85%;
+  border-left: 0px;
+}
+
+.danger {
+  background-color: red;
+  color: white;
+}
